layout bugs solved

--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -1,5 +1,4 @@
 main, .container {
-    padding-bottom: 147px;
 
     font-family: Roboto;
 
